--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ parts/
 sdist/
 var/
 wheels/
+store/settings.py
+.store/settings.py
 share/python-wheels/
 *.egg-info/
 .installed.cfg
@@ -60,6 +62,7 @@ cover/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+settings.py
 
 # Flask stuff:
 instance/
